@@ -1,63 +1,60 @@
 /*
- * Copyright 2019 Shaun Laurens
  *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
+ *  * Copyright 2019-2020 eleventy7
+ *  *
+ *  * Licensed under the Apache License, Version 2.0 (the "License");
+ *  * you may not use this file except in compliance with the License.
+ *  * You may obtain a copy of the License at
+ *  *
+ *  * https://www.apache.org/licenses/LICENSE-2.0
+ *  *
+ *  * Unless required by applicable law or agreed to in writing, software
+ *  * distributed under the License is distributed on an "AS IS" BASIS,
+ *  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ *  * See the License for the specific language governing permissions and
+ *  * limitations under the License.
  *
- * https://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
  */
 
 plugins {
     id 'java'
-    id 'maven'
     id 'idea'
     id 'checkstyle'
-    id 'com.github.johnrengelman.shadow' version '5.1.0' apply false
+    id 'maven-publish'
 }
 
 defaultTasks 'clean', 'build', 'test'
 
-def AERON_VERSION = '1.23.1'
-def AGRONA_VERSION = '1.0.11'
-def CHECKSTYLE_VERSION = '8.25'
-def JUPITER_VERSION = '5.5.0'
-def MOCKITO_VERSION = '3.0.0'
-def SBE_VERSION = '1.14.1'
-
 def eiderGroup = 'io.eider'
 def eiderVersion = '0.1-SNAPSHOT'
-def eiderJavaVersion = JavaVersion.VERSION_11
-
-configurations {
-    shadow
-}
+def javaVersion = JavaVersion.VERSION_11
 
 allprojects {
     apply plugin: 'java'
-    apply plugin: 'maven'
+    apply plugin: 'idea'
     apply plugin: 'checkstyle'
 
     group eiderGroup
     version eiderVersion
 
     compileJava {
-        sourceCompatibility = 11
-        targetCompatibility = 11
-        options.compilerArgs << '-XDignore.symbol.file' // Suppress warnings about using Unsafe
+        sourceCompatibility = javaVersion
+        targetCompatibility = javaVersion
+        options.compilerArgs.addAll(['--add-exports', 'java.base/java.lang.reflect=ALL-UNNAMED'])
+        options.compilerArgs.addAll(['--add-exports', 'java.base/java.net=ALL-UNNAMED'])
+        options.compilerArgs.addAll(['--add-exports', 'java.base/sun.nio.ch=ALL-UNNAMED'])
+        options.compilerArgs.addAll(['--add-exports', 'jdk.unsupported/sun.misc=ALL-UNNAMED'])
         options.encoding = 'UTF-8'
         options.deprecation = true
     }
 
     compileTestJava {
-        sourceCompatibility = eiderJavaVersion
-        targetCompatibility = eiderJavaVersion
+        sourceCompatibility = javaVersion
+        targetCompatibility = javaVersion
+        options.compilerArgs.addAll(['--add-exports', 'java.base/java.lang.reflect=ALL-UNNAMED'])
+        options.compilerArgs.addAll(['--add-exports', 'java.base/java.net=ALL-UNNAMED'])
+        options.compilerArgs.addAll(['--add-exports', 'java.base/sun.nio.ch=ALL-UNNAMED'])
+        options.compilerArgs.addAll(['--add-exports', 'jdk.unsupported/sun.misc=ALL-UNNAMED'])
         options.encoding = 'UTF-8'
         options.deprecation = true
     }
@@ -67,24 +64,20 @@ allprojects {
     }
 
     dependencies {
-        implementation group: 'io.aeron', name: 'aeron-all', version: AERON_VERSION
-        implementation group: 'org.agrona', name: 'agrona', version: AGRONA_VERSION
-        implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
+        implementation group: 'org.agrona', name: 'agrona', version: '1.4.1'
+        implementation group: 'io.aeron', name: 'aeron-all', version: '1.27.0'
+        implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.30'
         implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
-
-        checkstyle group: 'com.puppycrawl.tools', name: 'checkstyle', version: CHECKSTYLE_VERSION
-
-        testRuntime group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: JUPITER_VERSION
-
-        testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: JUPITER_VERSION
-        testImplementation group: 'org.mockito', name: 'mockito-core', version: MOCKITO_VERSION
+        testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.6.2'
+        checkstyle group: 'com.puppycrawl.tools', name: 'checkstyle', version: '8.32'
+        testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.6.2'
     }
 
     tasks.withType(Checkstyle) {
         checkstyle {
-            configFile = "${rootDir}/config/eider_checks.xml" as File
+            configFile = "${rootDir}/config/checks.xml" as File
             configProperties = ["suppressionFile": "${rootDir}/config/suppressions.xml"]
-            toolVersion = CHECKSTYLE_VERSION
+            toolVersion = '8.32'
         }
     }
 
@@ -107,80 +100,91 @@ allprojects {
     }
 }
 
-project(':eider-protocol') {
-    apply plugin: 'com.github.johnrengelman.shadow'
-
-    def generatedDir = file("${buildDir}/generated-src")
-    sourceSets {
-        generated.java.srcDir generatedDir
-    }
-
-    dependencies {
-        compile "org.agrona:agrona:${AGRONA_VERSION}"
-        compile "uk.co.real-logic:sbe-tool:${SBE_VERSION}"
-        testCompile sourceSets.generated.output
-    }
-
-    compileGeneratedJava {
-        dependsOn 'generateMessages'
-        sourceCompatibility = eiderJavaVersion
-        targetCompatibility = eiderJavaVersion
-        options.deprecation = true
-        classpath += sourceSets.main.runtimeClasspath
-    }
-
-    task generateMessages(type: JavaExec) {
-        main = 'uk.co.real_logic.sbe.SbeTool'
-        classpath = sourceSets.main.runtimeClasspath
-        systemProperties('sbe.output.dir': generatedDir,
-                'sbe.target.language': 'Java',
-                'sbe.validation.stop.on.error': 'true',
-                'sbe.validation.xsd': 'src/main/resources/sbe/sbe.xsd')
-        args = [
-                'src/main/resources/io/eider/protocol/messages.xml'
-        ]
-    }
-
-    jar {
-        from(sourceSets.generated.output) {
-            include '**/*.class'
-        }
-    }
-
-    jar.dependsOn compileGeneratedJava
-}
-
-project('eider-core') {
+project('eider-processor') {
     apply plugin: 'java-library'
     apply plugin: 'checkstyle'
 
     dependencies {
-        compileOnly 'com.github.spotbugs:spotbugs-annotations:3.1.12'
-        compile project(path: ':eider-protocol')
+        implementation "org.agrona:agrona:1.4.1"
+        implementation "org.openjdk.jmh:jmh-core:1.23"
+        implementation "org.hdrhistogram:HdrHistogram:2.1.12"
+        implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.30'
+        implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
+        testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.6.2'
+        checkstyle group: 'com.puppycrawl.tools', name: 'checkstyle', version: '8.32'
+        testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.6.2'
+    }
+}
+
+project('eider-test') {
+    apply plugin: 'java-library'
+    apply plugin: 'checkstyle'
+
+    def generatedDir = file("${buildDir}/generated")
+
+    sourceSets {
+        generated.java.srcDir generatedDir
     }
 
-    jar.enabled = true
-
-    jar {
-        manifest.attributes(
-                'Implementation-Title': 'Eider',
-                'Implementation-Version': "${eiderVersion}",
-                'Implementation-Vendor': 'Shaun Laurens',
-                'Automatic-Module-Name': 'io.eider.eidercore'
-        )
+    compileGeneratedJava {
+        sourceCompatibility = javaVersion
+        targetCompatibility = javaVersion
+        options.deprecation = true
+        classpath += sourceSets.main.runtimeClasspath
     }
 
-    task sourcesJar(type: Jar) {
-        archiveClassifier = 'sources'
-        from sourceSets.main.allSource
+    dependencies {
+        annotationProcessor project(':eider-processor')
+        implementation project(path: ':eider-processor')
+        implementation "org.agrona:agrona:1.4.1"
+        implementation "org.openjdk.jmh:jmh-core:1.23"
+        implementation "org.hdrhistogram:HdrHistogram:2.1.12"
+        implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.30'
+        implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
+        testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.6.2'
+        checkstyle group: 'com.puppycrawl.tools', name: 'checkstyle', version: '8.32'
+        testImplementation project(path: ':eider-processor')
+        testImplementation sourceSets.generated.output
+        testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.6.2'
     }
+}
 
-    artifacts {
-        archives sourcesJar
+
+model {
+    tasks.generatePomFileForMavenJavaPublication {
+        destination = file("$project.projectDir/pom.xml")
+    }
+}
+
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            artifactId = 'aeron-cookbook'
+            from components.java
+            versionMapping {
+                usage('java-api') {
+                    fromResolutionOf('runtimeClasspath')
+                }
+                usage('java-runtime') {
+                    fromResolutionResult()
+                }
+            }
+            pom {
+                name = 'Aeron Cookbook'
+                description = 'Dependency Tracking Only'
+                url = 'http://www.aeroncookbook.com'
+                licenses {
+                    license {
+                        name = 'The Apache License, Version 2.0'
+                        url = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                    }
+                }
+            }
+        }
     }
 }
 
 wrapper {
-    gradleVersion = '5.6.4'
+    gradleVersion = '6.4'
     distributionType = 'ALL'
 }
